Bug 30800 - UI: grid lines disappeared in Calc for cells with background color
Summary: UI: grid lines disappeared in Calc for cells with background color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium major
Assignee: André Schnabel
URL:
Whiteboard: target:3.5
Keywords:
: 34175 34518 (view as bug list)
Depends on:
Blocks: Sheet-Gridlines
  Show dependency treegraph
 
Reported: 2010-10-12 06:48 UTC by cunio
Modified: 2024-06-13 13:13 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cunio 2010-10-12 06:48:56 UTC
LibreOffice Calc

LibreOffice 3.3.0 
OOO330m7 (Build:9526)
libreoffice-build 3.2.99.0

All the grid lines disappeared for cells with background colour set to anything other than "No Fill"
Comment 1 Kohei Yoshida 2010-10-12 06:55:24 UTC
Yes, that's intentional for compatibility with other spreadsheet programs.  There have been many requests for this feature from those users who use Calc to design input forms; to remove grid lines in selected areas.  When designing forms inside spreadsheet, grid lines look very ugly.
Comment 2 Rainer Bielefeld Retired 2010-10-16 10:08:29 UTC
Same with WIN XP.

I strongly disagree with that "intention", and I prefer incompatibility to other spreadsheet programs instead of now seeing my spreadsheets ugly and unusable. If you want to make cell border grid lines invisible in a selected area, create a property "do not show grid"!
Comment 3 Michael Meeks 2010-10-16 12:59:29 UTC
Ho hum - what fun. Clearly, in full wysiwyg mode - the lines are not printed, and if you really want grid lines - it is easy to get them back by adding explicit grey grid lines (?)
Comment 4 Rainer Bielefeld Retired 2010-10-17 21:04:44 UTC
@ Michael Meeks:
> it is easy to get them back ...
And to remove them for Printout? That's a completely different behaviour from the standard grid lines, what will not be useful for me at all.
Comment 5 Rainer Bielefeld Retired 2010-11-16 10:50:28 UTC
I heard that we will get a selection in menu 'Tools -> Options -> Calc -> Compatibility' for "OOo legacy". Can we get a similar selection for the behaviour discussed here? My wife is disabled and has has a system with colored columns + default grid to "navigate" within a sheet, that becomes difficult if in some columns grid as help for orientation is missing. And borders cause much workd and other problems.
Comment 6 Kohei Yoshida 2010-11-16 11:05:31 UTC
Alright.  But we'll have to wait until the next release, since we are way past the 3.3 code freeze, I'm afraid.
Comment 7 Kohei Yoshida 2010-11-19 07:26:11 UTC
Re-assigning to Katarina.  The goal is to make this a configuration option, under Calc - Compatibility in the Options dialog.
Comment 8 Megaten 2011-03-01 14:34:02 UTC
Hie, have you postponed the option to the next version? I didn't find the new option into the 3.3.1.
Comment 9 Kohei Yoshida 2011-03-03 17:11:40 UTC
*** Bug 34175 has been marked as a duplicate of this bug. ***
Comment 10 andréb 2011-03-06 18:58:38 UTC
*** Bug 34518 has been marked as a duplicate of this bug. ***
Comment 11 andréb 2011-03-06 19:01:28 UTC
I'm _very_ eagerly awaiting this fix :)
Comment 12 sclewin 2011-03-13 05:48:50 UTC
Using 3.3.1 on Ubuntu 10.10 and can not find the option anywhere.  Where was the fix applied?

This is very important to myself as I do not care much about Excel compatibility(I use ODF formats) and find the missing guidelines not only ugly, but make the spreadsheet less readable.  I am surprised that Excel uses this as a standard as guidelines are there to make rows and columns more readable and there is no reason to take them away.
Comment 13 Rainer Bielefeld Retired 2011-03-13 07:40:33 UTC
Modified version to the one most nearby to the report.

A quick search found 2 unfixed bugs with target 3.3.1:
Bug 30800 - UI: grid lines disappeared in Calc for cells with background colour
Bug 31672 - Background Color not overriding
New target?
Comment 14 Marcel Svitalsky 2011-03-28 05:48:19 UTC
Please, please, pretty please make this fix as soon as possible. For me (and apparently for many others) this bug, or shall we say missing feature, is the real "no go" for LibreOffice. Thx.
Comment 15 Megaten 2011-04-04 06:05:30 UTC
There is a pilot on the flight?
Just a little answer will be appreciated.
So I'm still waiting in OOo 3.2.
Comment 16 gui 2011-05-16 15:53:55 UTC
Pleasepleasepleaseplease... get back grid cells!!! :~(
A config option would be supportable too... ;-)
Comment 17 Rainer Bielefeld Retired 2011-05-16 22:49:05 UTC
I'm sorry, but current behavior is the result of crazy idea, until now I did not read any comprehensible argument for it. But we have some serious counter-arguments.

It should not be too different to return to the old behavior.

Rised Importance due to discussion.
Comment 18 Kohei Yoshida 2011-05-16 22:54:22 UTC
(In reply to comment #17)
> I'm sorry, but current behavior is the result of crazy idea, until now I did
> not read any comprehensible argument for it. But we have some serious
> counter-arguments.

I appreciate you Rainer, but calling this a crazy idea is a bit out of line.  There were users who relied on this behavior for Excel compatibility as I already explained! and call that idea crazy is very subjective!!
Comment 19 Kohei Yoshida 2011-05-16 22:55:52 UTC
Let's make this an easy hack, so that an interested party can contribute a patch for this.  I'll be the assignee meanwhile.
Comment 20 Kohei Yoshida 2011-05-16 23:00:20 UTC
Goal: The goal of the easy hack is to make this a configuration option.

Code Pointer: ScOutputData is the class that implements the rendering of all things on the sheet.  You need to change the ordering of layers depending on the configuration option.
Comment 21 Megaten 2011-05-20 01:13:33 UTC
Hie Kohei
Many thanks for your comment.
I hope to see soon this option.
Comment 22 brenbarn 2011-06-10 09:47:45 UTC
I'm not clear on what solution is being proposed.  The current behavior is that any cell with a background color shows no grid lines.  It sounds like people are suggesting an option to go back to the old Calc approach whereby grid lines are always shown regardless of the cell's background color.

But that isn't a good solution either.  There should be a PER CELL option --- part of the cell formatting just like borders and fill --- to show gridlines or not.
Comment 23 P.L. 2011-06-19 20:38:20 UTC
I very rarely get involved in discussions & bug reporting, but this one affects me greatly (and is the reason why I have to stick with Ooo for now, after trying LO 3.4), so I would like to chime in.

By searching the mailinglist, I came across this Bug Report, and found out that this is a "feature", and there is nothing wrong with the argument for the current choice. However, it presents a huge issue for people like me who color spreadsheet areas for easier reference and navigation and now have single values floating anchorless in large colored rectangles...

I fully support the current position of giving people at least the OPTION to put the grid back on top.

I would also like to propose to add it this way in the preferences/options  (rather than naming it some obscure compatibility feature):
- LibreOffice Calc -> View -> Visual Aids -> Grid Lines -> Checkbox already exists.
(To turn the whole grid on/off)
- Under that, there is already the color chooser.
- ! Under that, simply add "Overlay" -> Checkbox.
(To put the grid on top if checked (like OOo), if unchecked (default) leave it underneath for the current Excel compatibility)

BTW, in #22 Brenbarn asked for a per-cell solution: that is already available as the current fix: simply add a similar-to-grid sized/colored border to any individual cells requiring something like this. The issue is for people like me that would require to do that to EVERY cell in the sheets, which could be 1000s... (and probably slowing down LO in the process)

I hope this can be implemented, I would really like to switch to LO, not the least because I appreciate the spirit and effort people here have been putting into it.
Comment 24 André Schnabel 2011-06-25 00:44:21 UTC
ok, taking this one.

there is already a brief discussion on he topic at
https://service.gmx.net/de/cgi/derefer?TYPE=3&DEST=http%3A%2F%2Fcomments.gmane.org%2Fgmane.comp.documentfoundation.libreoffice.design%2F2363

currently I have a prototye that implements both option in Calc - View and in Calc - Compatibility. I need at least one week more to discuss what would be the better choice and identify sideffcets, proper wording ...

would be good, if people who like too get a good solution would join 
libreoffice-ux-advise@lists.freedesktop.org list and evaluate the opions
and side effects (e.g. if it is resonable to remove grid color selection
from   Calc - view)
Comment 25 André Schnabel 2011-07-03 11:35:43 UTC
patch is currently in review. Implementation follows this spec:
http://wiki.documentfoundation.org/User:Andreschnabel/Spec_Calc_grid_lines_on_colored_background
Comment 26 Katarina Behrens 2011-07-06 02:28:56 UTC
Just pushed this to master. For the next major release (3.5)
Comment 27 Josef.Latt 2011-07-31 03:56:42 UTC
Why can the patch not be integrated in the next bugfixrelease?
Comment 28 André Schnabel 2011-07-31 23:14:39 UTC
This should not be included in 3.4.x, as it is not just a bugfix - it is new functionality including new UI strings and help texts. We would break lots of localizations if we would include all this.
Comment 29 Megaten 2011-08-03 01:26:47 UTC
One year to coming back to the previous status!!
Comment 30 Rainer Bielefeld Retired 2011-11-11 10:51:58 UTC
Found fix in parallel installation of MinGW Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID:  2ba5d12-e8c71c5-41e7bcd-4b83b90)] (daily/MinGW_cross-compilation2011-10-25_00.12.09)". Correctly mentioned in Help.
Comment 31 Megaten 2011-12-27 02:56:46 UTC
Nice the 3.5 is coming.
But the solution is not perfect.
When you have a border on a set of colored cells, the grid is just over the border and the result is really not pleased due to the duplicate : border + grid...
Hope to be useful.
Comment 32 Rainer Bielefeld Retired 2011-12-28 06:39:48 UTC
Fixed, not Invalid!

@Megaten:
Pleaase do not touch "dashboard"!
Comment 33 sclewin 2012-01-13 21:24:33 UTC
I have LibreOffice 3.5.0beta2 now and can not see the option to display the grid through the background.
Comment 34 Rainer Bielefeld Retired 2012-01-13 22:36:40 UTC
@sclewin@gmail.com
This is the Bug tracking system, not a helpdesk! You can get assistance  on the public users mailing list users@libreoffice.org, a mailing list from <http://www.documentfoundation.org/contribution/#lists> or
<http://wiki.documentfoundation.org/Local_Mailing_Lists>

Help index 'Grid -> Displayin lines (Calc)'
of 
Help search "grid view" item 'Spreadsheet options' -> View' leads to 
"Grid lines - Specifies when grid lines will be displayed. Default is to display grid lines only on cells that do not have a background color. You can choose to also display grid lines on cells with background color, or to hide them" in Calc 'Tools -> Options -> Calc -> View -> Viusal aids - Grid lines'
Comment 35 seele 2012-01-21 12:42:29 UTC
Greetings,

This Topic is not fixed yet. 
Yes, the new option enables grid lines to be on top, BUT it overwrites frames at the same time. 

So to finally get this right again, either frames should be put on top, or the option should be edited in that way, you could decide in which order backgroundcolor, gridlines and frames are displayed.

Logical would be the original order (from bottom to top): 
background color, gridlines, frames
Comment 36 Jean-Baptiste Faure 2012-01-21 13:06:45 UTC
@Seele:
Please do not change the version number, it indicates the first version in which the bug has been found.

Please, could you attach a screen copy showing the problem with frame?

Best regards. JBF
Comment 37 Kohei Yoshida 2012-01-21 16:53:24 UTC
No worries. I just discovered & fixed the cell border issue yesterday.  It will be fixed in RC2 (note RC2 not RC1).
Comment 38 Rainer Bielefeld Retired 2012-01-22 21:01:43 UTC
@seele
Please submit new bugs for new problems and check the bugzilla database before you do.

@Kohei:
Please close "Bug 44218 - Grid additionally shown with Cell borders" if your fix covers that problem.
Comment 39 seele 2012-01-23 19:27:56 UTC
I'm sorry if I caused some trouble, it was not intended.

Anyway a BIG Thank You to all you people participating and fixing stuff! Your effort can not be estimated highly enough!
Comment 40 Rainer Bielefeld Retired 2012-04-10 02:38:24 UTC
EasyHack tags unification: tags only allowed in Whiteboard to make queries more easy and reliable