fix for fdo#30800: Option to display calc gridlines on colored cells

* change UI option for grid line display to tri-state drop down
* view option VOPT_GRID will take the information wheter to "Show"
  or "Hide" grid lines. New view option VOPT_GRID_ONTOP will take
  the information wheter to display grid lines on top of colored
  cells or not
* depending on VOPT_GRID_ONTOP grid lines will be drawn before or
  after drawing cell background in ScGridWindow::Draw
* store option as boolean property "GridOnColoredCells" (path:
  "/org.openoffice.Office.Calc/Layout/Line") in user config
* see
  http://wiki.documentfoundation.org/User:Andreschnabel/Spec_Calc_grid_lines_on_colored_background#UI_definitions
  for spec